# bitbrowser_batch_auto

./: .gitignore  README.md  pyproject.toml  start_linux.sh  start_mac.command  start_windows.bat
.claude/skills/playwright-flow-builder/: SKILL.md
.codex/skills/playwright-flow-builder/: SKILL.md
configs/: app.example.yaml  tasks.example.yaml  tasks.mock_parallel.yaml
docs/: automation-flow-design.md  bitbrowser-browser-api.md  execution-plan.md  gui-design.md  human-mouse-simulation.md  lightweight-task-scheduler.md  project-framework.md
docs/playwright-python/: README.md  manifest.json
docs/playwright-python/api/: class-apirequest.md  class-apirequestcontext.md  class-apiresponse.md  class-apiresponseassertions.md  class-browser.md  class-browsercontext.md  class-browsertype.md  class-cdpsession.md  class-clock.md  class-consolemessage.md  class-credentials.md  class-debugger.md  class-dialog.md  class-download.md  class-elementhandle.md  (+27 more)
flows/declarative/: mock_checkin_fixed.yaml  open_and_check.yaml  open_and_get_title.yaml  suixiang_checkin.yaml
flows/py/: conditional_login.meta.yaml  conditional_login.py  custom_flow.meta.yaml  custom_flow.py  paginate_titles.meta.yaml  paginate_titles.py
scripts/: download_playwright_python_docs.py  mock_checkin_page.html  mouse_trace_page.html  mouse_trace_parallel.py  setup_venv.py  test_bitbrowser_cdp.py
skills/playwright-flow-builder/: SKILL.md
src/bitbrowser_auto/: cli.py  config.py
tests/: test_flow_validator.py  test_human_mouse.py  test_python_flow.py  test_storage.py  test_trace.py  test_ui_core.py
(+80 files in other folders)
